wifi: fix parsing Microsoft Network Cost IE

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/issues/734

Fixes: 5307b1ed733f ('wifi: guess metered flag based on Network Cost information element')

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/merge_requests/879
(cherry picked from commit 8327312c518baa4d17cb348c1a4a129c27f72332)
(cherry picked from commit a4d2106ace073c69db52e4fb9ad71bd50e8bf606)